--- a/payments.html
+++ b/payments.html
@@ -1,3 +1,6 @@
+<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+<script type="text/javascript" src="payments.js"></script>
+
 <form action="" method="POST" id="payment-form">
   <span class="payment-errors"></span>
 
