--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   </div>
   <div class="block">
     <div class="area-3-col"> 
-      <div class="three-col one"> a  </div>
+      <div class="three-col one"><h2> something. </h2> a  </div>
       <div class="three-col two"> afaf </div>
       <div class="three-col three"> sdfdsjkLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad m </div>    
     </div>
